# spive2d-android

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src/js/: events.js  spine-loader.js  spine-ui.js  ui-controls.js  ui.js
